--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Antonio Gabriel <antoniocamposgabriel@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@grpc/proto-loader": "^0.7.0",
+    "grpc": "^1.24.11"
+  }
 }
